# data-collector

data-collector/: pyproject.toml
data-collector/data/: README.md
data-collector/data_collector/: main.py
data-collector/trash_collector/: connect_over_ssh.py  connect_over_ssh_with_cli.py  create_tempfs.py  garbage.py
