[tool.poetry]
name = "data-collector"
version = "0.1.0"
description = ""
authors = ["robert <roberttenbosch@gmail.com>"]
readme = "README.md"
packages = [{include = "data_collector"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
