[tool.poetry]
name = "data-collector"
version = "0.1.0"
description = ""
authors = ["robert <roberttenbosch@gmail.com>"]
readme = "README.md"
packages = [{include = "data_collector"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
